<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainFragment">


    <Button
        android:id="@+id/btnMatchCenter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/btn_background"
        android:minHeight="0dp"
        android:paddingVertical="9dp"
        android:text="@string/matchCenter"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvMainScreen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main">

            <ImageView
                android:id="@+id/ivBackgroundForCv"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/backgroundImageContent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/stroked_box" />

            <Button
                android:id="@+id/btnFonSite"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/stroked_box"
                android:paddingHorizontal="40dp"
                android:paddingVertical="10dp"
                android:text="@string/signIn"
                android:textSize="26sp"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvAd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ad"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="@+id/btnFonSite"
                app:layout_constraintEnd_toStartOf="@+id/btnFonSite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnFonSite" />

            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/censorship"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="@+id/btnFonSite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnFonSite"
                app:layout_constraintTop_toTopOf="@+id/btnFonSite" />

            <TextView
                android:id="@+id/tvAlert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/warning"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tvAge"
                app:layout_constraintStart_toStartOf="@+id/tvAd"
                app:layout_constraintTop_toBottomOf="@+id/btnFonSite" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>