<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AgeAskFragment">

    <TextView
        android:id="@+id/tvIncrQualif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/censorship"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvConfirmAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/stroked_box"
        android:text="@string/confirmAge"
        android:textAllCaps="true"
        android:textSize="34sp"
        android:textStyle="bold"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toTopOf="@+id/tvRefutAge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIncrQualif"
        app:layout_constraintVertical_bias="0.373" />

    <TextView
        android:id="@+id/tvRefutAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:background="@drawable/stroked_box"
        android:text="@string/refuteAge"
        android:textSize="16sp"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>