<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ConditionsAskFragment">

    <TextView
        android:id="@+id/tvConditions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:gravity="center"
        android:text="@string/conditions"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAccept"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_background"
        android:minHeight="0dp"
        android:paddingVertical="9dp"
        android:text="@string/accept"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnDismiss"
        app:layout_constraintEnd_toEndOf="@+id/tvConditions"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tvConditions"
        app:layout_constraintTop_toBottomOf="@+id/tvConditions"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnDismiss"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background"
        android:minHeight="0dp"
        android:paddingVertical="9dp"
        android:text="@string/dismiss"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnAccept"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnAccept"
        app:layout_constraintTop_toBottomOf="@+id/btnAccept"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>